correction menu navigation tablette

--- a/style.css
+++ b/style.css
@@ -623,13 +623,18 @@ footer a
 	/***HEADER***/
 
 	/*en-tête*/
-    header{display:flex;}
-    #titre{min-width:450px;flex-wrap:wrap}
-    nav ul :nth-child(1){order:2;left:0px}
+    header{display:flex;width:auto}
+    #titre{min-width:400px;display:block;position:relative;}
+	#logo{position: absolute;}
+	nav{display:block;}
+	nav ul{display:flex;flex-wrap:wrap;justify-content:space-around;;}
+    nav ul :nth-child(1){order:2;}
     nav ul :nth-child(2){order:3}
-    nav li{min-width:140px;width:auto;}
-    nav a{min-width:65px;}
-    #inscription {position:relative;left:0px;width:60px;margin-right:0}
+	nav ul :nth-child(3){order:1;margin-left:60%;font-size:1.6rem;font-weight:bold;border-bottom:none;width:165px}
+    nav li{width:18rem;border-bottom:4px solid #F2F2f2;height:30px;line-height:2rem;font-size:1.2rem;}
+    nav li:hover{border-top:none;border-bottom:3px solid #0065FC}
+	nav a{position:relative;left:20px;}
+    
 
     /*Filtres*/
     #filtres{flex-direction:column;}
